# ReactAgent_DocReader

./: .env  README.md  main.py  pyproject.toml  requirements.txt  streamlitapp.py
src/Vectorstore/: vector.py
src/config/: config.py
src/data_ingestion/: doc_processor.py
src/nodes/: reactnode.py
